# Arkanoid

./: CMakeLists.txt
common/: config.h.in
res/levels/: level_0.txt  level_1.txt  level_2.txt
src/: Arkanoid.c  Arkanoid.h  ball.c  ball.h  config.h  console.c  console.h  game.c  game.h  globals.c  globals.h  level.c  level.h  player.c  player.h  utils.c  utils.h
